--- a/vite-project/tsconfig.json
+++ b/vite-project/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["src", "node_modules/vite-plugin-pwa/client.d.ts"],
+  "references": [],
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
@@ -15,7 +17,5 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
-  },
-  "include": ["src", "node_modules/vite-plugin-pwa/client.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  }
 }
